[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GUI/HoverUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/langar_16.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.713726, 0.505882, 0.207843, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.560784, 0.294118, 0.0588235, 1 )

[sub_resource type="GDScript" id=2]
script/source = "extends VBoxContainer

onready var Name = $Name
onready var Price = $HBoxContainer/Price
onready var Stage = $HBoxContainer/Stage

func set_name(n):
	Name.text = \"Crop: \" + str(n)

func set_price(p):
	Price.text = \"$ \" + str(p)

func set_stage(s):
	Stage.text = \"Growth: \" + str(s)
"

[sub_resource type="GDScript" id=3]
script/source = "extends VBoxContainer

onready var Name = $Name
onready var Money = $Money

func set_name(n: String):
	Name.text = n

func set_money(m):
	Money.text = '$' + str(m)
"

[sub_resource type="GDScript" id=4]
script/source = "extends VBoxContainer

func set_item_name(var n: String, var p: int):
	$Name.text = \"Player %d: \" % p + n

func set_description(var n: String):
	$Description.text = n
"

[sub_resource type="Animation" id=5]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Node2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.220378, 1.59651, 1, -0.60358, 0.0277927, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/HBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Node2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.515086, 0.493298, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.00130401, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/HBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="HoverUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D"]
anchor_right = 1.0
margin_bottom = 46.0
mouse_filter = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CropPanel" type="PanelContainer" parent="Node2D/HBoxContainer"]
margin_right = 56.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CropInfo" type="VBoxContainer" parent="Node2D/HBoxContainer/CropPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 51.0
margin_bottom = 41.0
mouse_filter = 2
script = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/HBoxContainer/CropPanel/CropInfo"]
margin_right = 46.0
margin_bottom = 16.0
mouse_filter = 2
custom_constants/separation = 25

[node name="Price" type="Label" parent="Node2D/HBoxContainer/CropPanel/CropInfo/HBoxContainer"]
margin_right = 9.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "$"

[node name="Stage" type="Label" parent="Node2D/HBoxContainer/CropPanel/CropInfo/HBoxContainer"]
margin_left = 34.0
margin_right = 46.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "#"

[node name="Name" type="Label" parent="Node2D/HBoxContainer/CropPanel/CropInfo"]
margin_top = 20.0
margin_right = 46.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Crop"
align = 1

[node name="PlayerPanel" type="PanelContainer" parent="Node2D/HBoxContainer"]
margin_left = 64.0
margin_right = 116.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" type="VBoxContainer" parent="Node2D/HBoxContainer/PlayerPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 41.0
mouse_filter = 2
script = SubResource( 3 )

[node name="Name" type="Label" parent="Node2D/HBoxContainer/PlayerPanel/PlayerInfo"]
margin_right = 42.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
align = 1

[node name="Money" type="Label" parent="Node2D/HBoxContainer/PlayerPanel/PlayerInfo"]
margin_top = 20.0
margin_right = 42.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "$"
align = 1

[node name="ItemPanel" type="PanelContainer" parent="Node2D/HBoxContainer"]
margin_left = 124.0
margin_right = 176.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/HBoxContainer/ItemPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 81.0

[node name="P1ItemInfo" type="VBoxContainer" parent="Node2D/HBoxContainer/ItemPanel/VBoxContainer"]
margin_right = 42.0
margin_bottom = 36.0
mouse_filter = 2
script = SubResource( 4 )

[node name="Name" type="Label" parent="Node2D/HBoxContainer/ItemPanel/VBoxContainer/P1ItemInfo"]
margin_right = 42.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
align = 1

[node name="Description" type="Label" parent="Node2D/HBoxContainer/ItemPanel/VBoxContainer/P1ItemInfo"]
margin_top = 20.0
margin_right = 42.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "desc"
align = 1
autowrap = true

[node name="P2ItemInfo" type="VBoxContainer" parent="Node2D/HBoxContainer/ItemPanel/VBoxContainer"]
margin_top = 40.0
margin_right = 42.0
margin_bottom = 76.0
mouse_filter = 2
script = SubResource( 4 )

[node name="Name" type="Label" parent="Node2D/HBoxContainer/ItemPanel/VBoxContainer/P2ItemInfo"]
margin_right = 42.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Name"
align = 1

[node name="Description" type="Label" parent="Node2D/HBoxContainer/ItemPanel/VBoxContainer/P2ItemInfo"]
margin_top = 20.0
margin_right = 42.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Desc."
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 5 )
anims/Exit = SubResource( 6 )

[connection signal="resized" from="Node2D/HBoxContainer/CropPanel" to="." method="_on_PanelContainer_resized"]
[connection signal="resized" from="Node2D/HBoxContainer/PlayerPanel" to="." method="_on_PanelContainer_resized"]
[connection signal="resized" from="Node2D/HBoxContainer/ItemPanel" to="." method="_on_PanelContainer_resized"]
